@@ -1,3 +1,7 @@
+n/a - August 4, 2004
+	* Added MODE, DIRMODE, and CONFMODE variables to the makefile 
+	  to allow permissions to be set at install. (DJ)
+
 n/a - July 31, 2004
 	
 	* Moved PIDFILE check to getpids and removed arguments from
@@ -8,8 +12,8 @@ n/a - July 31, 2004
 
 n/a - July 21, 2004
 
-	* Committed DJ Lucas's patch for the killproc function.  It no longer requires
-	  arguments if PIDFILE is set
+	* Committed DJ Lucas's patch for the killproc function.  It no 
+	  longer requires arguments if PIDFILE is set
 	* added --backup to all sysconfig configuration files, so they are not
 	  replaced on a make install
 
